k8s/03-spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/api/actuator/prometheus"
        prometheus.io/port: "444"
    spec:
      containers:
      - name: spring-app
        image: europe-central2-docker.pkg.dev/uplifted-sol-493208-m7/projekt-biblioteka/spring-app:v23
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 444
---
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  annotations:
    cloud.google.com/backend-config: '{"default": "spring-backend-config"}'
spec:
  type: NodePort
  selector:
    app: spring-app
  ports:
    - port: 444
      targetPort: 444
      nodePort: 30444
