k8s/04-react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: europe-central2-docker.pkg.dev/uplifted-sol-493208-m7/projekt-biblioteka/react-app:ce01c3c4e63c980a9a84df9a28174e95265fc5b9
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: NodePort
  selector:
    app: react-app
  ports:
    - port: 80           
      targetPort: 80
