k8s/05-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      app: postgres-db 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: spring-app
